# Ampel-ZTF-archive

./: .gitignore  Dockerfile  LICENSE  README.md  conftest.py  environment.yml  mypy.ini  pyproject.toml  renovate.json  start_test_server.sh
.github/workflows/: cd.yaml  container.yaml  docker.yml  main.yml
.jenkins/: Dockerfile.build  Jenkinsfile  run_mypy.sh
.jenkins/initdb/archive/: 09_compactify_upper_limit_id.sql  10_add_read_queue.sql  11_archive_schema_3.3.sql  12_clear_partnership_cutouts.sql  create_users.sh
ampel/ztf/archive/: ArchiveDB.py  ArchiveDBClient.py  ZUDSArchiveDB.py  resources.py  types.py
ampel/ztf/archive/server/: app.py  cutout_schema.json  cutouts.py  db.py  healpix_cone_search.py  models.py  models.pybak  s3.py  settings.py  skymap.py  tokens.py
ampel/ztf/t0/: ArchiveUpdater.py  ZUDSArchiveUpdater.py
ampel/ztf/test/: test_archivedb.py  test_zudsarchive.py
migrations/: 01_update_hpx.py  02_add_archive_count.py
src/ampel/archive/: ArchiveDB.py  ArchiveDBClient.py
src/ampel/pipeline/t0/: ArchiveUpdater.py
src/ampel/pipeline/t0/alerts/: ZIAlertArchiverSupplier.py
src/ampel/ztf/archive/: ArchiveDB.py  ArchiveDBClient.py  ZUDSArchiveDB.py
src/ampel/ztf/pipeline/t0/: ArchiveUpdater.py  ZUDSArchiveUpdater.py
src/ampel/ztf/test/: test_archivedb.py  test_zudsarchive.py
test/: conftest.py  test_archivedb.py
tests/: conftest.py  fixtures.py  test_archivedb.py  test_server.py
tests/test-data/: schema_3.1.json  schema_3.2.json  schema_3.3.json  schema_4.02.avro  schema_4.02.json
tests/test-data/initdb/archive/: 03_cone_search.sql  07_archive_schema_3.1.sql  08_archive_schema_3.2.sql  09_compactify_upper_limit_id.sql  10_add_read_queue.sql  13_clean_read_queue.sql  14_alert_topics.sql  15_access_tokens.sql  15_healpix_search.sql  17_role_tokens.sql  18_avro_archive.sql  19_partnership_role.sql  19_read_queue_chunk_size.sql  20_read_queue_error.sql  21_read_queue_ack.sql  22_read_queue_group_timing.sql  23_healpix_search_fine.sql  25_avro_archive_count.sql  recover_ssnamenr.py
