[tool.poetry]
name = "ampel-ztf-archive"
version = "0.8.0-alpha.0"
description = "ZTF alert archive for the Ampel system"
authors = [
    "Jakob van Santen <jakob.van.santen@desy.de>",
]
maintainers = [
    "Jakob van Santen <jakob.van.santen@desy.de>"
]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://ampelproject.github.io"
repository = "https://github.com/AmpelProject/Ampel-ZTF-archive"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Typing :: Typed",
]
packages = [
    {include = "ampel"}
]

[tool.poetry.scripts]
ampel-ztf-archive-consumer-groups = 'ampel.ztf.archive.ArchiveDB:consumer_groups_command'

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "~2.0.0"
psycopg2 = "^2.8.6"
fastapi = {version = "^0.115.0", optional = true}
pydantic = {version = "^2", optional = true}
PyJWT = {version = "^2.1.0", extras = ["server"]}
boto3 = "^1.19.2"
fastavro = "^1.9.2"
astropy-healpix = "^1.0.0"
pydantic-settings = {version = "^2.5.2", optional = true}
uvicorn = {version = "^0.34.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
coverage = {extras = ["toml"], version = "^7.6.4"}
mypy = "^1.13.0"
pytest-timeout = "^2.3.1"
httpx = "^0.28.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.25.0"
moto = "^5.0.20"
boto3-stubs = {extras = ["s3"], version = "^1.35.57"}

[tool.poetry.extras]
server = ["fastapi", "pydantic-settings", "pydantic", "uvicorn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--showlocals -r a -v --integration"
filterwarnings = [
    "error",
    "default::pytest.PytestUnraisableExceptionWarning",
    "ignore:datetime\\.datetime\\.utcnow\\(\\) is deprecated:DeprecationWarning:botocore",
]

[tool.mypy]
namespace_packages = true
show_error_codes = true
warn_unused_ignores = true
packages = [
  "ampel"
]

[[tool.mypy.overrides]]
module = [
  "astropy.*",
  "astropy_healpix.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "B",
    "DTZ",
    "T20",
    "PT",
    "RET",
    "SLF",
    "SIM",
    # # "ARG", # sometimes your arguments have to conform to an interface
    # # "ERA", # seems to prohibit all comments, that's bad
    "PL",
    "PERF",
    "RUF",
]
ignore = [
    "PLR09", # too many (arguments|branches)
]

[tool.ruff.lint.per-file-ignores]
"ampel/ztf/archive/server/*" = ["B008"]
"migrations/*" = ["T201"]
"tests/*" = ["T201", "SLF001", "PLR2004", "PERF", "RUF018"]
